--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -16,12 +16,133 @@
             rel="stylesheet">
         <title>Pluto Backend Assignment</title>
     </head>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script>
+        var url_href = window.location.href;
+        var url = new URL(url_href);
+        var shortUrl = url
+            .searchParams
+            .get("url");
+
+        $(document).ready(function () {
+            $(function(){ 
+                $('#password_button').click(function(){
+                        pwCheck();
+                });
+                $('#cancle_button').click(function(){
+                    location.href = "index.html";
+                });
+            
+});
+
+            if (localStorage.getItem("token") != null && localStorage.getItem("token") != "") {
+
+                $.ajax({
+                    type: "GET",
+                    url: "http://localhost:9000/api/auth/token/" + shortUrl,
+                    dataType: 'text',
+                    processData: false,
+                    beforeSend: function (xhr) {
+                        xhr.setRequestHeader("Authorization", localStorage.getItem("token"));
+                    },
+                    success: function (result) {
+                        var data = JSON.parse(result);
+                        if (data.data) {
+                            getDetail();
+                        } else {
+                            $(".modal").fadeIn();
+                        }
+                    },
+                    error: function () {}
+                })
+
+            } else {
+                $(".modal").fadeIn();
+            }
+        });
+
+        function pwCheck() {
+            $.ajax({
+                type: "POST",
+                url: "http://localhost:9000/api/auth/pw",
+                contentType: "application/json",
+                data: JSON.stringify({url: shortUrl, password: $('#password_input').val()}),
+                dataType: 'json',
+                success: function (result) {
+                   // var data = JSON.parse(result);
+                    localStorage.setItem("token", result.data.token);
+                    getDetail();
+                },
+                error: function (responseText) { 
+                    alert(responseText.responseJSON.message);
+                }
+            })
+        }
+
+        function getDetail() {
+            $.ajax({
+                type: "GET",
+                url: "http://localhost:9000/api/" + shortUrl + "/detail",
+                dataType: 'text',
+                processData: false,
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader("Authorization", localStorage.getItem("token"));
+                },
+                success: function (result) {
+                    $(".modal").fadeOut();
+                    var data = JSON.parse(result);
+                    $("#original_url").text(data.data.destinationUrl);
+                    $("#short_url").append(
+                        "<a href='https://june.pe.kr/" + data.data.shortUrl + "'>june.pe.kr/" + data.data.shortUrl
+                    )
+                    $("#create_at").text(data.data.createdAt);
+                    $("#total_click").text(data.data.totalClickCount);
+                    $("#last_click_at").text(data.data.lastClickedAt);
+                    var accessLogDetailDtoList = data.data.accessLogDetailDtoList;
+                    $(accessLogDetailDtoList).each(function () {
+                        appendAccessLog(this);
+                    });
+                },
+                error: function () {
+                    //에러가 났을 경우 실행시킬 코드 location.href = "error.html";
+
+                }
+            })
+        }
+
+        function appendAccessLog(data) {
+            $("#access_log_body").append(
+                "<tr> <td>" + data.userIp + "</td> <td>" + data.userAgent + "</td> <td>" +
+                data.referer + "</td> <td>" + data.createAt + "</td> </tr>"
+            )
+        }
+    </script>
+
+
 
     <body>
         <header>
             <h1>Short URL Generator</h1>
         </header>
         <main>
+           
+            
+            <div class="modal">
+              <div class="modal_content" 
+                   title="클릭하면 창이 닫힙니다.">
+
+                   <div><p>비밀번호를 입력 해 주세요 </p>
+                
+                    <input type="password" id="password_input">
+                    <input type="button" id="password_button" value="확인">
+                    <input type="button" id="cancle_button" value="취소"> 
+ 
+                </div>
+                          
+                <br>
+              </div>
+            </div>
+
             <div class="detail-section">
                 <div class="section-title">URL Details</div>
                 <table>
@@ -33,81 +154,41 @@
                         <tbody>
                             <tr>
                                 <td>Destination URL</td>
-                                <td id="original_url">/</td>
+                                <td id="original_url"></td>
                             </tr>
                             <tr>
                                 <td>Short URL</td>
-                                <td id="short_url"></td>
-                            </tr>
-                            <tr>
-                                <td>Created At</td>
-                                <td id="create_at"></td>
-                            </tr>
-                            <tr>
-                                <td>Total Clicks</td>
-                                <td id="total_click"></td>
-                            </tr>
-                            <tr>
-                                <td>Last Clicked At</td>
-                                <td id="last_click_at"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="detail-section">
-                    <div class="section-title">Access Logs</div>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>IP</th>
-                                <th>User Agent</th>
-                                <th>Referrer</th>
-                                <th>Clicked At</th>
-                            </thead>
-                            <tbody id="access_log_body">
+                                <td id="short_url"></tr>
+                                <tr>
+                                    <td>Created At</td>
+                                    <td id="create_at"></td>
+                                </tr>
+                                <tr>
+                                    <td>Total Clicks</td>
+                                    <td id="total_click"></td>
+                                </tr>
+                                <tr>
+                                    <td>Last Clicked At</td>
+                                    <td id="last_click_at"></td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
-                </main>
-            </body>
-            <script type="text/javascript" src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
-            <script>
-                $(document).ready(function () {
-                    var url_href = window.location.href;
-                    var url = new URL(url_href);
-                    var shortUrl = url
-                        .searchParams
-                        .get("url");
-                    $.ajax({
-                        type: "GET",
-                        url: "https://www.june.pe.kr/" + shortUrl + "/detail",
-                        dataType: 'text',
-                        success: function (result) {
-                            var data = JSON.parse(result);
-                            $("#original_url").text(data.data.destinationUrl);
-                            $("#short_url").text("june.pe.kr/"+data.data.shortUrl);
-                            $("#create_at").text(data.data.createdAt);
-                            $("#total_click").text(data.data.totalClickCount);
-                            $("#last_click_at").text(data.data.lastClickedAt);
 
-                            var accessLogDetailDtoList = data.data.accessLogDetailDtoList;
-                            $(accessLogDetailDtoList).each(function(){
-                                appendAccessLog(this);
-                            });
-                            
-                        },
-                        error: function () {
-                            //에러가 났을 경우 실행시킬 코드
-                        }
-                    })
-                });
-
-                function appendAccessLog(data) {
-                    $("#access_log_body").append(
-                        "<tr> <td>" + data.userIp + "</td> <td>" + data.userAgent + "</td> <td>" +
-                        data.referer + "</td> <td>" + data.createAt + "</td> </tr>"
-                    )
-                }
-            </script>
-        </html>
+                    <div class="detail-section">
+                        <div class="section-title">Access Logs</div>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>IP</th>
+                                    <th>User Agent</th>
+                                    <th>Referrer</th>
+                                    <th>Clicked At</th>
+                                </thead>
+                                <tbody id="access_log_body"></tbody>
+                            </table>
+                        </div>
+                    </main>
+                </body>
+              
+            </html>
