--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,18 +37,26 @@
         <script type="text/javascript" src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script>
             $('#url-btn').click(function () {
-                $.ajax({
+
+     var pw = prompt("생성하실 URL 상세페이지 조회에 사용하실 비밀번호를 입력 해 주세요");
+
+                if(prompt == '' || prompt == null){
+                        return false;
+                }
+     $.ajax({
                     type: "POST",
-                    url: "https://www.june.pe.kr/",
+                    url: "http://localhost:9000/api",
                     contentType: "application/json",
-                    data: JSON.stringify({destinationUrl: $('#url-input').val(), password: '123'}),
-                    dataType: 'text',
-                    success: function (result) {
+                    data: JSON.stringify({url: $('#url-input').val(), password: pw}),
+                    dataType: 'json',
+                    success: function (data) {
                         var data = JSON.parse(result);
+                        window.localStorage.setItem("token", data.data.token)
                          location.href = "detail.html?url=" + data.data.url
                     },
-                    error: function () {
-                        //에러가 났을 경우 실행시킬 코드
+                    error: function (responseText) {
+                        alert(responseText.responseJSON.message);
+                        $('#url-input').val("");
                     }
                 })
             });
