--- a/src/main/resources/templates/style.css
+++ b/src/main/resources/templates/style.css
@@ -101,3 +101,21 @@ thead > tr {
 tr:nth-child(even) {
     background: #F3F4F6;
 }
+
+
+
+
+  
+  .modal{ 
+    position:absolute; width:100%; height:100%; background: rgba(0,0,0,0.8); top:0; left:0; display:none;
+  }
+  
+  .modal_content{
+    width:400px; height:200px;
+    background:#fff; border-radius:10px;
+    position:relative; top:50%; left:50%;
+    margin-top:-100px; margin-left:-200px;
+    text-align:center;
+    box-sizing:border-box; padding:50px 0;
+    line-height:23px; cursor:pointer;
+  }
